Notifications: Fix image not showing

--- a/style/notification.scss
+++ b/style/notification.scss
@@ -15,8 +15,10 @@
 // }
 
 .notif-img {
+	background-size: cover;
 	min-width: 100px;
 	min-height: 100px;
+	margin-right: 5px;
 }
 
 .notification .notif-summary {
